# savitr

./: .gitignore  FINDINGS.md  PR.md  README.md  SEAM.md  pyproject.toml  requirements-mlx.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
bench/: bench_mlx.py  bench_spec.py  bench_surya.py  compare_quality.py  guided_schema.py  mlx_quality.py  prompt_tokens.py
bench/fixtures/: README.md
docs/: api.md  conf.py  findings.md  index.md  model_card.md
savitr/: __init__.py  cli.py  mlx_backend.py  mlx_ocr.py  parse_manipur_mlx.py  samples.py
savitr/rolls/: __init__.py  fields.py  ocr.py  parse.py  pdfio.py  pipeline.py  schema.py
training/: build_corpus.py  eval_distilled.py  eval_oos.py  infer_torch.py  kaggle_train_only.py  kaggle_train_surya.py  merge_adapter.py  prep_pages.py  test_adapter_local.py  train.py  train_torch.py
